fix: loader container text align

--- a/sass/loader.module.sass
+++ b/sass/loader.module.sass
@@ -29,6 +29,7 @@ div.loaderWindow
         margin-top: 10px
         font-weight: 400
         color: $font2
+        text-align: center
 
 div.loader
     display: inline-block
